--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "airtable": "^0.11.1",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
