--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "airtable": "^0.11.1",
+    "bootstrap": "^5.0.0-beta3",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
